--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h3>$148.98 <small>USD</small></h3>
 
                 <span>$198.98</span>
-                <span>You save: 50.00 (25%)</span>
+                <span>You save: $50.00 (25%)</span>
               </div>
               <button class="add_to_cart">Buy Now</button>
             </div>
@@ -180,7 +180,7 @@
                 <h3>$499.99 <small>USD</small></h3>
 
                 <span>$699.99</span>
-                <span>You save: 200.00 (28%)</span>
+                <span>You save: $200.00 (28%)</span>
               </div>
               <button class="add_to_cart">Buy Now</button>
             </div>
@@ -227,7 +227,7 @@
                 <h3>$245.99 <small>USD</small></h3>
 
                 <span>$289.99</span>
-                <span>You save: 44.00 (15%)</span>
+                <span>You save: $44.00 (15%)</span>
               </div>
               <button class="add_to_cart">Buy Now</button>
             </div>
@@ -239,7 +239,7 @@
               <div class="watch_review">
                 <div class="ratings">
                   <div class="number d-flex">
-                    <h2>4.8</h2>
+                    <h2>4.1</h2>
                     <small>RATED</small>
                   </div>
                   <div class="product_review">
@@ -274,7 +274,7 @@
                 <h3>$245.99 <small>USD</small></h3>
 
                 <span>$289.99</span>
-                <span>You save: 44.00 (15%)</span>
+                <span>You save: $44.00 (15%)</span>
               </div>
               <button class="add_to_cart">Buy Now</button>
             </div>
@@ -306,14 +306,14 @@
           </div>
         </article>
       </section>
-      <div class="controls">
+      <footer class="controls">
         <span class="prev">
           <i class="fa-solid fa-caret-left"></i>
         </span>
         <span class="next">
           <i class="fa-solid fa-caret-right"></i>
         </span>
-      </div>
+      </footer>
     </main>
     <!--jquery -->
     <script
